# SuperSimpleMH

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt  run.bat
MH_Core/: main.py
MH_Core/data/: GameObjects.py  Menus.py  __init__.py
MH_Core/pm/: __init__.py
MH_Core/pyTypes/: __init__.py
MH_Core/pyTypes/unitTypes/: Menu.py  Player.py  __init__.py
MH_Core/utils/: exceptions.py
MH_Core/window/: __init__.py
MH_Core/window/shapes/: __init__.py
MH_MapApi/: MapService.py  main.py
MH_MapApi/pyWrappers/: ApiWrapper.py  __init__.py  pyStructures.py
MH_MapApi/session/: Map.py  Session.py
MH_MapApi/utils/: AreaData.py  __init__.py
MH_MapApi/utils/data/: Act.py  Area.py  Difficulty.py  GameObjects.py  Npcs.py  PresetType.py
config/: areas.toml  directions.toml  general.toml
dep/pyMeow/: __init__.py  pyMeow.pyd  pyMeow.pyi
logger/: Logger.py  __init__.py
resources/datatables/: charstats.csv  defensive.csv  magicprefix.csv  magicsuffix.csv  misc.csv  offensive.csv  rareprefix.csv  raresuffix.csv  runewords.csv  setitems.csv  statscost.csv  strings.csv  uniqueitems.csv
resources/sprites/advanced_stats/: advanced_stats_coords.toml
resources/sprites/inventory/: inventory_big.toml
su_core/: __init__.py  __main__.py  gui.py
su_core/canvas/: AdvancedStatsPanel.py  InventoryPanel.py  MapManager.py  __init__.py
su_core/canvas/drawings/: ProgressBar.py  __init__.py  shapes.py
su_core/data/: Area.py  Difficulty.py  GameItem.py  GameObjects.py  Menus.py  MonsterFlags.py  Npcs.py  PlrMode.py  Skill.py  Stats.py  __init__.py  flags.py  tables.py
su_core/logger/: Logger.py  __init__.py
su_core/logging/: Logger.py
su_core/math/: __init__.py
su_core/pm/: Mem.py  __init__.py
su_core/pyStructures/: __init__.py
su_core/pyTypes/: __init__.py
su_core/utils/: Config.py  RPYClient.py  SharedMemory.py  Window.py  __init__.py  exceptions.py  helpers.py
su_core/window/: AdvancedStatsPanel.py  Inventory.py  InventoryPanel.py  __init__.py
tools/: build.py  corsurcoords.py
(+18 files in other folders)
