[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "SuperSimpleMH"
version = "5.6.4"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
]

dependencies = [
    "cachetools",
    "rpyc",
    "pywin32",
    "opencv-python",
    "pillow",
    "pandas",
    "numpy",
    "psutil"
]

[project.optional-dependencies]
dev = [
    "black"
]

[tool.setuptools.packages.find]
include = ["su_core*"]

[project.scripts]
super_simple_mh = "su_core.__main__:main"

[tool.black]
line-length = 120
target-version = ['py311']
exclude = "rpyc-d2-map-api"